--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="utf-8">
     <script src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css"></link>
+    <link
+      href="https://fonts.googleapis.com/css?family=Press+Start+2P"
+      rel="stylesheet"
+    />
     <title>Basic Tetris</title>
   </head>
   <body>
-
-    <h3>Score:<span id="score">0</span></h3>
-    <button id="start-button">Start/Pause</button>
-
     <div class="container">
+      <div class="info">
+        <h1>TETRIS</h1>
+        <h3>Score:<span id="score">0</span></h3>
+        <h3>Lines:<span id="score">0</span></h3>
+        <h3>Level:<span id="score">0</span></h3>
+        <button id="start-button" class="start-button">Start/Pause</button>
+      </div>
       <div class="grid">
         <div></div>
         <div></div>
